# claw-review

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPRINT1_LAUNCH.md  SPRINT2_LAUNCH.md  SPRINT_COMPARISON.md  claw-review-report.html  pyproject.toml
docs/: claw-review-report.html  dashboard.html  index.html
src/claw_review/: __init__.py  alignment.py  batch.py  cli.py  clustering.py  config.py  costs.py  github_client.py  models.py  report.py  scoring.py  state.py
src/claw_review/adapters/: __init__.py  cybersecurity.py  fraud_detection.py  github_pr.py
src/claw_review/dashboard/: __init__.py  app.py  data_loader.py
src/claw_review/domains/: __init__.py  cybersecurity.py  fraud_detection.py  github_pr.py
tests/: __init__.py  conftest.py  test_alignment.py  test_batch.py  test_cli.py  test_clustering.py  test_config.py  test_costs.py  test_github_client.py  test_integration.py  test_models.py  test_report.py  test_scoring.py  test_state.py
tests/fixtures/: sample_clusters.json  sample_embeddings.json  sample_intents.json  sample_scores.json  sample_siem_alerts.json  sample_transactions.json  sample_vision_docs.json
tests/test_adapters/: test_cybersecurity_adapter.py  test_fraud_adapter.py  test_github_pr_adapter.py
tests/test_dashboard/: __init__.py  test_app.py  test_data_loader.py  test_rendering.py
tests/test_domains/: test_cybersecurity_config.py  test_fraud_config.py
tests/test_github/: test_actions.py  test_app.py  test_commenter.py  test_webhook.py
tests/test_platform/: test_engine.py  test_interfaces.py  test_registry.py
(+12 files in other folders)
