[project]
name = "claw-review"
version = "0.1.0"
description = "AI-powered PR triage using multi-model consensus via OpenRouter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "click>=8.1",
    "rich>=13.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
claw-review = "claw_review.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
